force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Typical_Drawing_to_Reference__c.field-meta.xml
<CustomField>
    <fullName>Typical_Drawing_to_Reference__c</fullName>
    <label>Typical Drawing to Reference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CM_STR_STD_90</fullName>
            </value>
            <value>
                <fullName>CM_STR_BARI</fullName>
            </value>
            <value>
                <fullName>CM_TRV_STD</fullName>
            </value>
            <value>
                <fullName>CM_TRV_BARI</fullName>
            </value>
            <value>
                <fullName>CM_TRV_STD_SR90</fullName>
            </value>
            <value>
                <fullName>CM_TRV_STD_SR45_TT</fullName>
            </value>
            <value>
                <fullName>CM_TRV_BARI_HYB_SR45_TT</fullName>
            </value>
            <value>
                <fullName>CM_TRV_BARI_UT_FR</fullName>
            </value>
            <value>
                <fullName>CM_TRV_BARI_UT_BR</fullName>
            </value>
            <value>
                <fullName>CM_STR_STD_LG</fullName>
            </value>
            <value>
                <fullName>CM_STR_STD_90_LG</fullName>
            </value>
            <value>
                <fullName>CM_TRV_STD_LG</fullName>
            </value>
            <value>
                <fullName>FS_STR_STD</fullName>
            </value>
            <value>
                <fullName>FS_STR_BARI</fullName>
            </value>
            <value>
                <fullName>FS_TRV_STD</fullName>
            </value>
            <value>
                <fullName>FS_TRV_BARI</fullName>
            </value>
            <value>
                <fullName>WM_STR_STD_WB</fullName>
            </value>
            <value>
                <fullName>WM_STR_STD_SL</fullName>
            </value>
            <value>
                <fullName>WM_STR_BARI_WB</fullName>
            </value>
            <value>
                <fullName>WM_STR_BARI_SL</fullName>
            </value>
            <value>
                <fullName>WM_TRV_STD_WB</fullName>
            </value>
            <value>
                <fullName>WM_TRV_STD_SL</fullName>
            </value>
            <value>
                <fullName>WM_TRV_BARI_DSL</fullName>
            </value>
            <value>
                <fullName>WM_TRV_BARI_SUP</fullName>
            </value>
            <value>
                <fullName>WM_STR_STD_SL_LG</fullName>
            </value>
            <value>
                <fullName>WM_TRV_STD_SL_LG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>