force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Urgency_Rating__c.field-meta.xml
<CustomField>
    <fullName>Urgency_Rating__c</fullName>
    <inlineHelpText>Used to help Project Mgr prioritize activities.</inlineHelpText>
    <label>Urgency Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Urgent!</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>