force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/VA__c.field-meta.xml
<CustomField>
    <fullName>VA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VA</label>
    <type>Checkbox</type>
</CustomField>