force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Wall_Bracket_Turntable__c.field-meta.xml
<CustomField>
    <fullName>Wall_Bracket_Turntable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wall Bracket (Turntable)</label>
    <type>Checkbox</type>
</CustomField>