force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Example: 150 (lbs)</description>
    <inlineHelpText>Example: 150 (lbs)</inlineHelpText>
    <label>Weight</label>
    <length>3</length>
    <type>Text</type>
</CustomField>