force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Wheelchair__c.field-meta.xml
<CustomField>
    <fullName>Wheelchair__c</fullName>
    <label>Wheelchair</label>
    <length>10</length>
    <type>Text</type>
</CustomField>