force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/White_Rails_default_Natural__c.field-meta.xml
<CustomField>
    <fullName>White_Rails_default_Natural__c</fullName>
    <description>Check if you require white rails with this design.</description>
    <inlineHelpText>Check if you require white rails with this design.</inlineHelpText>
    <label>Rail Color (default=Natural)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Natural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>