force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/X4_5_Resubmitted__c.field-meta.xml
<CustomField>
    <fullName>X4_5_Resubmitted__c</fullName>
    <label>4.5 Resubmitted</label>
    <type>Date</type>
</CustomField>