force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/recordTypes/Liko_Home_Care_Quote.recordType-meta.xml
<RecordType>
    <fullName>Liko_Home_Care_Quote</fullName>
    <active>true</active>
    <description>Liko Home Care Quote</description>
    <label>Liko Home Care Quote</label>
</RecordType>