force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/recordTypes/Liko_Order.recordType-meta.xml
<RecordType>
    <fullName>Liko_Order</fullName>
    <active>true</active>
    <label>Liko Order</label>
</RecordType>