force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/recordTypes/Liko_Quote.recordType-meta.xml
<RecordType>
    <fullName>Liko_Quote</fullName>
    <active>true</active>
    <label>Liko Quote</label>
</RecordType>