force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/validationRules/PE_Stamp_Reqd.validationRule-meta.xml
<ValidationRule>
    <fullName>PE_Stamp_Reqd</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 PE_Stamp_Req_d__c,
  OR(
  ISPICKVAL(PE_Stamp_Type__c, &quot;&quot;)
 )
)</errorConditionFormula>
    <errorDisplayField>PE_Stamp_Req_d__c</errorDisplayField>
    <errorMessage>If  field PE Stamp Req&apos;d is checked, you must pick a PE Stamp Type. Basic, Standard or Custom.</errorMessage>
</ValidationRule>