force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quote_Stage__c</columns>
    <columns>Quote_Owner__c</columns>
    <columns>Opportunity__c</columns>
    <columns>JDE_Number__c</columns>
    <columns>Ship_to_Name__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>