force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/listViews/Liko_Home_Care.listView-meta.xml
<ListView>
    <fullName>Liko_Home_Care</fullName>
    <columns>NAME</columns>
    <columns>Quote_Stage__c</columns>
    <columns>JDE_Number__c</columns>
    <columns>Ship_to_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Quote_Owner__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Hill_Rom_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AP_and_LIKO_Order_Tracking__c.Liko_Home_Care_Quote</value>
    </filters>
    <label>Liko Home Care</label>
    <language>en_US</language>
</ListView>